# 4.2.2

./: .env  README.md  pyproject.toml
config/: constants.py
tests/: conftest.py  test_auth.py  test_items.py
