[tool.poetry]
name = "pomidor-api-tests"
version = "0.1.0"
description = "API автотесты для Pomidor Stage"
readme = "README.md"
packages = [{ include = "tests" }]

[tool.poetry.dependencies]
python = "^3.13.3"
requests = "^2.32.3"
pytest = "^8.3.5"
faker = "^37.1.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"